--- a/public/sobre.html
+++ b/public/sobre.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Bikcraft - Saiba mais sobre a gente</title>
-		<meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Retrô e Esporte.">
+		<meta name="description" content="Compre a sua bike personalizada na Bikcraft. Possuímos modelos Passeio, Retrô e Esporte.">
 
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="Bikcraft - Saiba mais sobre a gente"/>
